--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+                "output":"/"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
